--- a/src/app/components/auth/places/places.component.html
+++ b/src/app/components/auth/places/places.component.html
@@ -1,8 +1,17 @@
+<div class="card-header bg-transparent border-bottom-0 position-relative">
+  <button class="btn btn-dark-blue position-absolute top-0 end-0 mt-2 me-2"
+          [routerLink]="['/request-booking']">
+    Request Booking
+  </button>
+</div>
 <div class="container mt-5">
   <div class="row">
     <!-- Place Card -->
     <div class="col-md-4 mb-4 d-flex" *ngFor="let place of places">
       <div class="card h-100 shadow-sm d-flex flex-column border">
+        <!-- Card Header with Request Booking Button -->
+
+
         <!-- Image Slideshow -->
         <div class="image-container">
           <div class="image-wrapper">
