--- a/src/app/components/auth/places/places.component.scss
+++ b/src/app/components/auth/places/places.component.scss
@@ -1,5 +1,6 @@
 /* Card Styling */
 .card {
+  font-family: 'Poppins', sans-serif;
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
