--- a/src/app/components/auth/shared/header/header.component.html
+++ b/src/app/components/auth/shared/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="header">
   <nav>
     <ul>
+
+    <div class="logo">Discover Galle</div>
       <nav>
         <ul>
           <li><a routerLink="/">Home</a></li>
@@ -10,6 +12,10 @@
           <li><a routerLink="/contact">Contact Us</a></li>
         </ul>
       </nav>
+      <div class="auth-buttons">
+        <button class="signin">Sign In</button>
+        <button class="signup">Sign Up</button>
+      </div>
 
     </ul>
   </nav>
