--- a/src/app/request-booking/request-booking.component.scss
+++ b/src/app/request-booking/request-booking.component.scss
@@ -1,5 +1,6 @@
 .booking-container {
   max-width: 800px;
+  font-family: 'Poppins', sans-serif;
   margin: 0 auto;
   padding: 20px;
   background-color: #f9f9f9;
