--- a/src/app/components/auth/shared/header/header.component.scss
+++ b/src/app/components/auth/shared/header/header.component.scss
@@ -1,4 +1,5 @@
 .header {
+  font-family: 'Poppins', sans-serif;
   background-color: #333;
   color: white;
   padding: 20px 0;
@@ -25,4 +26,22 @@
       }
     }
   }
+}
+
+header .auth-buttons .signin {
+  background-color: #555;
+  color: white;
+}
+
+header .auth-buttons .signup {
+  background-color: #ff6f61;
+  color: white;
+}
+
+header .auth-buttons button {
+  padding: 0.5rem 1rem;
+  margin-left: 0.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
