--- a/src/app/components/auth/shared/header/header.component.html
+++ b/src/app/components/auth/shared/header/header.component.html
@@ -1,22 +1,24 @@
 <header class="header">
-  <nav>
-    <ul>
-
-    <div class="logo">Discover Galle</div>
-      <nav>
-        <ul>
-          <li><a routerLink="/">Home</a></li>
-          <li><a routerLink="/hotels">Hotels</a></li>
-          <li><a routerLink="/restaurants">Restaurants</a></li>
-          <li><a routerLink="/activities">Activities</a></li>
-          <li><a routerLink="/contact">Contact Us</a></li>
-        </ul>
-      </nav>
-      <div class="auth-buttons">
-        <button class="signin">Sign In</button>
-        <button class="signup">Sign Up</button>
-      </div>
-
-    </ul>
-  </nav>
+  <div class="header-top">
+    <div class="logo">
+      <a routerLink="/">
+        <i class="fas fa-compass"></i>
+        <span>Galle Explorer</span>
+      </a>
+    </div>
+    <nav class="main-nav">
+      <ul>
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/hotels">Hotels</a></li>
+        <li><a routerLink="/restaurants">Restaurants</a></li>
+        <li><a routerLink="/activities">Activities</a></li>
+        <li><a routerLink="/contact">Contact Us</a></li>
+      </ul>
+    </nav>
+    <div class="auth-buttons">
+      <button class="signin">Sign In</button>
+      <button class="signup">Sign Up</button>
+    </div>
+  </div>
+  
 </header>
