--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -279,8 +279,8 @@ footer {
 .hero {
   position: relative;
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-                    url('../../../assets/images/Galle-Lighthouse.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+                    url('../../../assets/images/image4.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -326,7 +326,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, rgba($primary-blue, 0.3), rgba($secondary-blue, 0.3));
+    background: linear-gradient(45deg, rgba($primary-blue, 0.1), rgba($secondary-blue, 0.1));
   }
 }
 
