--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,31 +2,31 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 // @use '@angular/material' as mat;
-@use 'variables' as v;
-@import '@fortawesome/fontawesome-free/css/all.min.css';
+// @use 'variables' as v;
+// @import '@fortawesome/fontawesome-free/css/all.min.css';
 
-// html {
-//   @include mat.theme((
-//     color: (
-//       theme-type: light,
-//       primary: mat.$azure-palette,
-//       tertiary: mat.$blue-palette,
-//     ),
-//     typography: Poppins,
-//     density: 0,
-//   ));
+// // html {
+// //   @include mat.theme((
+// //     color: (
+// //       theme-type: light,
+// //       primary: mat.$azure-palette,
+// //       tertiary: mat.$blue-palette,
+// //     ),
+// //     typography: Poppins,
+// //     density: 0,
+// //   ));
+// // }
+
+// // @import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+// html, body { 
+//     height: 100%; 
 // }
 
-// @import '@angular/material/prebuilt-themes/indigo-pink.css';
-
-html, body { 
-    height: 100%; 
-}
-
-body {
-  background-color: v.$background-color;
-  color: v.$text-color;
-  font-family: "Poppins", sans-serif; // Adjust font as needed
-  margin: 0;
-}
+// body {
+//   background-color: v.$background-color;
+//   color: v.$text-color;
+//   font-family: "Poppins", sans-serif; // Adjust font as needed
+//   margin: 0;
+// }
 
